--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <p><a href="SexualpädagogikAmGRG23.pdf"> Klicken für digitale Bildung </a></p>
+  <p><a href="SexualpädagogikAmGRG23.pdf"> Klicken für Sexualpädagogik </a></p>
 </html>
